.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Pull_Request__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipLabel>Pull Requests</relationshipLabel>
        <relationshipName>Pull_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Comment__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <formula>TEXT( Flosum__Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Pull Request</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pull Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>